--- a/pug/c_header.pug
+++ b/pug/c_header.pug
@@ -1,6 +1,6 @@
 header.MainHeader
   .container
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    nav.navbar.navbar-expand-lg
       a.navbar-brand(href="index.html")
         img(src="img/logo.png", alt="" height="40px")
       button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
